fixed middle menu issue on mobile

--- a/responsive.css
+++ b/responsive.css
@@ -26,6 +26,10 @@
     .all-icons{
         display: none;
     }
+    
+    .middle-menu, .right-menu{
+        display:none;
+    }
 
 
 
